--- a/worker/index.css
+++ b/worker/index.css
@@ -38,7 +38,7 @@
   --font-serif: "Domine", serif;
   --font-mono: Source Code Pro, monospace;
 
-  --radius: 0px;
+  --radius: 0.3rem;
   --shadow-2xs: 0px 5px 10px -2px hsl(40 60% 60% / 0.05);
   --shadow-xs: 0px 5px 10px -2px hsl(40 60% 60% / 0.05);
   --shadow-sm: 0px 5px 10px -2px hsl(40 60% 60% / 0.1), 0px 1px 2px -3px hsl(40 60% 60% / 0.1);
@@ -85,7 +85,7 @@
   --font-serif: "Domine", serif;
   --font-mono: Source Code Pro, monospace;
 
-  --radius: 0px;
+  --radius: 0.3rem;
   --shadow-2xs: 0px 5px 10px -2px hsl(40 60% 60% / 0.05);
   --shadow-xs: 0px 5px 10px -2px hsl(40 60% 60% / 0.05);
   --shadow-sm: 0px 5px 10px -2px hsl(40 60% 60% / 0.1), 0px 1px 2px -3px hsl(40 60% 60% / 0.1);
